cabal-version:      2.4
name:               RouteGen
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Apoorva Anand
maintainer:         apoorvaanand.work@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable RouteGen
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      bytestring,
                      aeson,
                      QuickCheck,
                      random
    hs-source-dirs:   app
    default-language: Haskell2010
